// Vitest Snapshot v1

exports[`should > component 1`] = `
"<style lang=\\"scss\\" scoped>
.foo {

  .title {

  }
}
.btn {

}
</style>"
`;

exports[`should > component 2`] = `
"<style lang=\\"scss\\" scoped>
div {

  .foo {

    p.title {

    }
  }
  button.btn {

  }
}
</style>"
`;

exports[`should > static 1`] = `
"<style lang=\\"scss\\" scoped>
.container {

  .header {

  }
  .main {

  }
  .footer {

    .email {

    }
  }
}
</style>"
`;

exports[`should > static 2`] = `
"<style lang=\\"scss\\" scoped>
div.container {

  h1.header {

  }
  main.main {

    ul {

      li {

      }
    }
  }
  div.footer {

    a.email {

    }
  }
}
</style>"
`;
